# SciNexus

./: README.md  docker-compose.yml  init.sql
auth-service/: Dockerfile  alembic.ini  auth_service.db  pyproject.toml
auth-service/alembic/: env.py
auth-service/app/: database.py  main.py
auth-service/app/models/: __init__.py  user.py
auth-service/app/utils/: security.py
documentation/: DOCS.md
event-service/: Dockerfile  pyproject.toml
event-service/app/: main.py
submission-service/: Dockerfile  pyproject.toml
submission-service/app/: main.py
