[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "sqlalchemy>=2.0.0",
    "argon2-cffi>=25.1.0",
    "psycopg[binary]>=3.2.0",
]
